allow to build several languages at the same time
darcs-hash:20060326190214-2fc9d-3e258b9f41437e61bdd65552cbeda5c77f754041.gz

--- a/Tcl/CMakeLists.txt
+++ b/Tcl/CMakeLists.txt
@@ -1,7 +1,7 @@
 ###############################################################################
 # Add the ITKTclSupport library which contains the itkTclCommand class.
 
-BEGIN_WRAPPER_LIBRARY("ITKTclSupport")
+BEGIN_WRAPPER_LIBRARY("ITKTclSupport" Tcl)
 
 SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
