first work to run tests with ctest
darcs-hash:20060326193311-2fc9d-f02a42a31f55aef7ef2e0659d57a762d5c6d6ed6.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ PROJECT(WrapITK)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.2)
 
+ENABLE_TESTING()
+
 ###############################################################################
 # Config ITKWrap
 ###############################################################################
