add a TODO for still unsupported option
darcs-hash:20060327094212-2fc9d-56b591790fc73897c0460df6413138e5d3498a71.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 PROJECT(WrapITK)
 
 # check cmake version
+# TODO: add the FATAL_ERROR option when we will switch to cmake 2.4 - 2.2 does not support it
 CMAKE_MINIMUM_REQUIRED(VERSION 2.2)
 
 ENABLE_TESTING()
