fix JavaCWD build
darcs-hash:20060327153228-2fc9d-91e27a938208723dcd0ee75a49b686f13dbae954.gz

--- a/Java/CMakeLists.txt
+++ b/Java/CMakeLists.txt
@@ -96,3 +96,7 @@ FOREACH(Kit ${ITK_KITS})
 ENDFOREACH(Kit)
 ADD_LIBRARY(ITKJavaJarDummyLibrary ITKJavaJarDummyLibrary.c)
 ADD_DEPENDENCIES(ITKJavaJarDummyLibrary ITKJavaJar)
+
+
+SUBDIRS(CWD)
+
