--- a/Java/CWD/CMakeLists.txt
+++ b/Java/CWD/CMakeLists.txt
@@ -3,16 +3,17 @@ IF(WRAP_ITK_JAVA)
   ADD_LIBRARY(SwigRuntimeJava MODULE ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx JavaCWD.cxx)
   INSTALL_TARGETS("/lib" SwigRuntimeJava)
   MAKE_DIRECTORY(${WRAP_ITK_JAVA_DIR}/InsightToolkit)
+  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
   ADD_CUSTOM_COMMAND(
         COMMENT "run native swig on SwigExtras.i"
-        SOURCE ${WrapITK_SOURCE_DIR}/SwigRuntime/JavaCWD.i
+        SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/JavaCWD.i
         COMMAND ${CSWIG} 
         ARGS -nocable -noruntime ${IGNORE_WARNINGS} -o ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx
         -outdir "${WRAP_ITK_JAVA_DIR}/InsightToolkit"
         -package InsightToolkit
-        -java -c++ ${WrapITK_SOURCE_DIR}/SwigRuntime/JavaCWD.i
+        -java -c++ ${CMAKE_CURRENT_SOURCE_DIR}/JavaCWD.i
         TARGET ${LIBRARY_NAME}Java
         OUTPUTS ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx
-        DEPENDS ${WrapITK_SOURCE_DIR}/SwigRuntime/JavaCWD.i ${CSWIG})
+        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/JavaCWD.i ${CSWIG})
 ENDIF(WRAP_ITK_JAVA)
 
