--- a/Java/CMakeLists.txt
+++ b/Java/CMakeLists.txt
@@ -1,3 +1,5 @@
+MAKE_DIRECTORY(${WRAP_ITK_JAVA_DIR})
+MAKE_DIRECTORY(${WRAP_ITK_JAVA_DIR}/InsightToolkit)
 SET(ITK_JAVA_CLASSPATH ${WRAP_ITK_JAVA_DIR})
 SET(ITK_JAVA_OUTPATH ${WRAP_ITK_JAVA_DIR})
 
