try to fix python envinronment for python test
darcs-hash:20060329061600-2fc9d-1797472879399fbcb030b4263488d16601ac59ae.gz

--- a/Python/Tests/CMakeLists.txt
+++ b/Python/Tests/CMakeLists.txt
@@ -1,19 +1,26 @@
-SET(PYTHON python)
+# configure the tests
+SET(PYTHON_TEST_LIB_PATH "${WrapITK_BINARY_DIR}/bin")
+SET(PYTHON_TEST_PYTHON_PATH "${WrapITK_BINARY_DIR}/Python")
+FOREACH(t typemaps.py template.py itk-functions.py module2module.py simple_pipeline.py)
+  CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/${t}.in"
+                "${CMAKE_CURRENT_BINARY_DIR}/${t}"
+                @ONLY IMMEDIATE)
+ENDFOREACH(t)
 
 # some tests will fail if dim=2 and unsigned short are not wrapped
 INTERSECTION(WRAP_2 2 "${WRAP_ITK_DIMS}")
 IF(WRAP_unsigned_short AND WRAP_2)
-  ADD_TEST(PythonTypemaps ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/typemaps.py)
+  ADD_TEST(PythonTypemaps ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/typemaps.py)
   
-  ADD_TEST(PythonTemplate ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/template.py)
+  ADD_TEST(PythonTemplate ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/template.py)
   
-  ADD_TEST(PythonItkFunctions ${PYTHON}
-    ${CMAKE_CURRENT_SOURCE_DIR}/itk-functions.py
+  ADD_TEST(PythonItkFunctions ${PYTHON_EXECUTABLE}
+    ${CMAKE_CURRENT_BINARY_DIR}/itk-functions.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png out.png
   )
   
-  ADD_TEST(PythonModuleToModule ${PYTHON}
-    ${CMAKE_CURRENT_SOURCE_DIR}/module2module.py
+  ADD_TEST(PythonModuleToModule ${PYTHON_EXECUTABLE}
+    ${CMAKE_CURRENT_BINARY_DIR}/module2module.py
     ${WrapITK_SOURCE_DIR}/images/cthead1.png
   )
 ENDIF(WRAP_unsigned_short AND WRAP_2)
@@ -21,8 +28,8 @@ ENDIF(WRAP_unsigned_short AND WRAP_2)
   
 FOREACH(d ${WRAP_ITK_DIMS})
   FOREACH(t ${WRAP_ITK_SCALAR})
-    ADD_TEST(PythonSimplePipeline${t}${d} ${PYTHON}
-      ${CMAKE_CURRENT_SOURCE_DIR}/simple_pipeline.py
+    ADD_TEST(PythonSimplePipeline${t}${d} ${PYTHON_EXECUTABLE}
+      ${CMAKE_CURRENT_BINARY_DIR}/simple_pipeline.py
       ${t}
       ${d}
       ${WrapITK_SOURCE_DIR}/images/cthead1.png
