--- a/Python/Tests/typemaps.py.in
+++ b/Python/Tests/typemaps.py.in
@@ -1,5 +1,18 @@
 #!/usr/bin/env python
 
+import sys
+sys.path.insert(0, "@PYTHON_TEST_PYTHON_PATH@")
+
+import os
+env_lib_name = "LD_LIBRARY_PATH"
+if os.environ.has_key(env_lib_name) :
+  os.environ[env_lib_name] = "@PYTHON_TEST_LIB_PATH@:%s" % os.environ[env_lib_name]
+else:
+  os.environ[env_lib_name] = "@PYTHON_TEST_LIB_PATH@"
+
+
+
+
 import itk
 
 # create some vars used later
