fix jar command
darcs-hash:20060329110823-2fc9d-e93d130b6c0a607a3fd2d2763d6110d011681e5a.gz

--- a/Java/CMakeLists.txt
+++ b/Java/CMakeLists.txt
@@ -69,7 +69,7 @@ IF(CMAKE_CONFIGURATION_TYPES)
     DEPENDS ${ITK_JAVA_KITS_FILES}
     COMMAND ${JAVA_ARCHIVE}
     ARGS -cf ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR}/InsightToolkit.jar
-    -C ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR} InsightToolkit
+    InsightToolkit
     COMMENT "Java Archive"
     )
   ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR}/InsightToolkit.jar)
@@ -81,7 +81,7 @@ ELSE(CMAKE_CONFIGURATION_TYPES)
     DEPENDS ${ITK_JAVA_KITS_FILES}
     COMMAND ${JAVA_ARCHIVE}
     ARGS -cf ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar
-    -C $${WRAP_ITK_JAVA_DIR} InsightToolkit
+    InsightToolkit
     COMMENT "Java Archive"
     )
   ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
