enhance java dependencies
darcs-hash:20060329133818-2fc9d-92fb60656194f0cb0b1e2c9ec96dae208ab805db.gz

--- a/Java/CWD/CMakeLists.txt
+++ b/Java/CWD/CMakeLists.txt
@@ -12,7 +12,7 @@ IF(WRAP_ITK_JAVA)
         -package InsightToolkit
         -java -c++ ${CMAKE_CURRENT_SOURCE_DIR}/JavaCWD.i
         TARGET ${LIBRARY_NAME}Java
-        OUTPUTS ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx
+        OUTPUTS ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx ${WrapITK_BINARY_DIR}/${WRAP_ITK_JAVA_DIR}/InsightToolkit/JavaCWD.java
         DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/JavaCWD.i ${CSWIG})
 ENDIF(WRAP_ITK_JAVA)
 
