--- a/Java/CMakeLists.txt
+++ b/Java/CMakeLists.txt
@@ -39,6 +39,7 @@ ENDIF(CMAKE_CONFIGURATION_TYPES)
 
 SET(ORDERING_DEP)
 FOREACH(Kit ${ITK_KITS})
+  SET(KIT_JAVACLASS_DEP_FILES)
   IF(${Kit} MATCHES VXLNumerics)
     SET(DEP_FILES ${VXLNumerics_JAVA_DEPENDS})
     SET(KIT_JAVA_NAME ${Kit})
@@ -47,14 +48,23 @@ FOREACH(Kit ${ITK_KITS})
     SET(DEP_FILES ${ITK${Kit}_JAVA_DEPENDS})
   ENDIF(${Kit} MATCHES VXLNumerics)
   FOREACH(File ${DEP_FILES})
-    SET(FULL_DEP_FILES ${FULL_DEP_FILES} ${WRAP_ITK_JAVA_DIR}/InsightToolkit/${File})
+    SET(FULL_JAVA_DEP_FILES ${FULL_JAVA_DEP_FILES} ${WRAPPER_LIBRARY_OUTPUT_DIR}/${WRAP_ITK_JAVA_DIR}/InsightToolkit/${File}.java)
+    SET(KIT_JAVACLASS_DEP_FILES ${KIT_JAVACLASS_DEP_FILES} ${WRAPPER_LIBRARY_OUTPUT_DIR}/${WRAP_ITK_JAVA_DIR}/InsightToolkit/${File}.class)
+    ADD_CUSTOM_COMMAND(
+      OUTPUT ${WRAPPER_LIBRARY_OUTPUT_DIR}/${WRAP_ITK_JAVA_DIR}/InsightToolkit/${File}.class
+      DEPENDS ${WRAPPER_LIBRARY_OUTPUT_DIR}/${WRAP_ITK_JAVA_DIR}/InsightToolkit/${File}.java ${WRAPPER_LIBRARY_OUTPUT_DIR}/${WRAP_ITK_JAVA_DIR}/InsightToolkit/JavaCWD.java ${ITK_BASE_JAVA_FILE} ${ORDERING_DEP}
+      COMMAND ${JAVA_COMPILE}
+      ARGS -classpath "${ITK_JAVA_CLASSPATH}" -d "${ITK_JAVA_OUTPATH}"
+      ${WRAPPER_LIBRARY_OUTPUT_DIR}/${WRAP_ITK_JAVA_DIR}/InsightToolkit/${File}.java
+      COMMENT "Compile ${File}.java")
   ENDFOREACH(File)
+  SET(FULL_JAVACLASS_DEP_FILES ${FULL_JAVACLASS_DEP_FILES} ${KIT_JAVACLASS_DEP_FILES})
 
   SET(ITK_JAVA_KIT_LIBS ${ITK_JAVA_KIT_LIBS} ${KIT_JAVA_NAME}Java)
   SET(KIT_FILE_NAME ${WRAP_ITK_JAVA_DIR}/InsightToolkit/${KIT_JAVA_NAME}Java)
   ADD_CUSTOM_COMMAND(
     OUTPUT ${KIT_FILE_NAME}.class
-    DEPENDS ${KIT_FILE_NAME}.java ${FULL_DEP_FILES} ${ITK_BASE_JAVA_FILE} ${ORDERING_DEP}
+    DEPENDS ${KIT_FILE_NAME}.java ${FULL_JAVA_DEP_FILES} ${ITK_BASE_JAVA_FILE} ${WRAPPER_LIBRARY_OUTPUT_DIR}/${WRAP_ITK_JAVA_DIR}/InsightToolkit/JavaCWD.java ${ORDERING_DEP}
     COMMAND ${JAVA_COMPILE}
     ARGS -classpath "${ITK_JAVA_CLASSPATH}" -d "${ITK_JAVA_OUTPATH}"
     ${KIT_FILE_NAME}.java
@@ -78,7 +88,7 @@ IF(CMAKE_CONFIGURATION_TYPES)
 ELSE(CMAKE_CONFIGURATION_TYPES)
   ADD_CUSTOM_COMMAND(
     OUTPUT ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar
-    DEPENDS ${ITK_JAVA_KITS_FILES}
+    DEPENDS ${ITK_JAVA_KITS_FILES} ${FULL_JAVACLASS_DEP_FILES} ${FULL_JAVA_DEP_FILES}
     COMMAND ${JAVA_ARCHIVE}
     ARGS -cf ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar
     InsightToolkit
