add a test for java
darcs-hash:20060329202642-2fc9d-e5f86d967c42d0fe7bcc1ce7acc832a3854f62f5.gz

--- a/Java/CMakeLists.txt
+++ b/Java/CMakeLists.txt
@@ -1,3 +1,5 @@
+SUBDIRS(Tests)
+
 MAKE_DIRECTORY(${WRAP_ITK_JAVA_DIR})
 MAKE_DIRECTORY(${WRAP_ITK_JAVA_DIR}/InsightToolkit)
 SET(ITK_JAVA_CLASSPATH ${WRAP_ITK_JAVA_DIR})
