force unsigned char simple pipeline for python
darcs-hash:20060329202931-2fc9d-c3ade40c61eea8a2ec7c43e241b2be94011b31dc.gz

--- a/Python/Tests/CMakeLists.txt
+++ b/Python/Tests/CMakeLists.txt
@@ -25,9 +25,9 @@ IF(WRAP_unsigned_short AND WRAP_2)
   )
 ENDIF(WRAP_unsigned_short AND WRAP_2)
 
-  
+UNIQUE(types "${WRAP_ITK_SCALAR};UC")
 FOREACH(d ${WRAP_ITK_DIMS})
-  FOREACH(t ${WRAP_ITK_SCALAR})
+  FOREACH(t ${types})
     ADD_TEST(PythonSimplePipeline${t}${d} ${PYTHON_EXECUTABLE}
       ${CMAKE_CURRENT_BINARY_DIR}/simple_pipeline.py
       ${t}
