--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -136,7 +136,8 @@ IF(PYTHON_EXECUTABLE)
   )
 ENDIF(PYTHON_EXECUTABLE)
 
-SET(PY_SITE_PACKAGES_PATH "${py_spp}" CACHE PATH "Python site-packages directory to install a .pth file pointing at WrapITK Python modules.")
+STRING(REGEX REPLACE "\\\\" "/" py_spp_nobackslashes "${py_spp}")
+SET(PY_SITE_PACKAGES_PATH "${py_spp_nobackslashes}" CACHE PATH "Python site-packages directory to install a .pth file pointing at WrapITK Python modules.")
 MARK_AS_ADVANCED(PY_SITE_PACKAGES_PATH)
 IF(PY_SITE_PACKAGES_PATH)
   INSTALL_AT_ABSOLUTE_PATH(install_wrapitk_compatibility "${PY_SITE_PACKAGES_PATH}" "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/WrapITK.pth")
