PyBuffer is a python only external project
darcs-hash:20060405181246-2fc9d-32c3f1600c53e850917af577427bb432869dde1b.gz

--- a/ExternalProjects/PyBuffer/CMakeLists.txt
+++ b/ExternalProjects/PyBuffer/CMakeLists.txt
@@ -7,7 +7,7 @@ FIND_PACKAGE( NUMARRAY )
 
 INCLUDE_DIRECTORIES( ${PYTHON_NUMARRAY_INCLUDE_DIR} )
 
-BEGIN_WRAPPER_LIBRARY("BufferConversion")
+BEGIN_WRAPPER_LIBRARY("BufferConversion" Python)
 
 SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)
 
