use nrrd format to try to fix test on windows plateform
darcs-hash:20060410083416-2fc9d-9d32a538e4aa7e44c20e5746e6fb44425976fd02.gz

--- a/Python/Tests/CMakeLists.txt
+++ b/Python/Tests/CMakeLists.txt
@@ -172,8 +172,8 @@ FOREACH(d ${WRAP_ITK_DIMS})
       ${t}
       ${d}
       ${WrapITK_SOURCE_DIR}/images/cthead1.png
-      simple_pipeline${t}${d}.img
-      --compare simple_pipeline${t}${d}.img ${WrapITK_SOURCE_DIR}/images/cthead1.png
+      simple_pipeline${t}${d}.nrrd
+      --compare simple_pipeline${t}${d}.nrrd ${WrapITK_SOURCE_DIR}/images/cthead1.png
     )
   ENDFOREACH(t)
 ENDFOREACH(d)
