try to automatically found vtkImagingPython on linux
darcs-hash:20060413125649-2fc9d-4dd438c00c22115a6a0de3611c8cb7e7063c05e2.gz

--- a/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
@@ -8,9 +8,24 @@ SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA ITKBasicFiltersB)
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
 
+# find the vtkImagingPython lib
+# use CMAKE_LIBRARY_PATH or -DVTK_IMAGING_PYTHON:PATH=... to give another location
+FIND_LIBRARY(VTK_IMAGING_PYTHON vtkImagingPython
+  /usr/lib/python2.4/site-packages/vtk/
+  /usr/lib/python2.3/site-packages/vtk/
+  /usr/lib/python2.2/site-packages/vtk/
+  /usr/lib/python2.1/site-packages/vtk/
+  /usr/local/lib/python2.4/site-packages/vtk/
+  /usr/local/lib/python2.3/site-packages/vtk/
+  /usr/local/lib/python2.2/site-packages/vtk/
+  /usr/local/lib/python2.1/site-packages/vtk/
+)
+
+MESSAGE(${VTK_IMAGING_PYTHON})
+
 IF(WRAP_ITK_PYTHON)
   TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python
-                        vtkImagingPython ITKCommon ITKBasicFilters)
+                        ${VTK_IMAGING_PYTHON} ITKCommon ITKBasicFilters)
   WRAP_ITK_INSTALL("/Python" "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
 ENDIF(WRAP_ITK_PYTHON)
 
